--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,16 @@
     <title>{{ site.title }} | {{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<link rel="shortcut icon" href="{{site.baseurl}}/assets/favicon.ico">
+	  
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="{{ site.baseurl }}/assets/images/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/assets/images/favicon-16x16.png">
+    <link rel="manifest" href="{{ site.baseurl }}/assets/images/site.webmanifest">
+    <link rel="mask-icon" href="{{ site.baseurl }}/assets/images/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#000000">
+    <meta name="theme-color" content="#ffffff">
+	  
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/bootstrap.css" media="screen">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/custom.min.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/syntax.css">
